Mapping redesign (#338)